<resources>
    <string name="app_name">AutofficinApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_client_ita">Aggiungi Nuovo Cliente</string>
    <string name="add_new_vehicle_ita">Aggiungi Nuovo Veicolo</string>
    <string name="new_job_ita">Aggiungi Nuovo Intervento</string>
    <string name="new_client_ita">Nuovo Cliente</string>
    <string name="name_ita">Nome:</string>
    <string name="insert_name_ita">Inserisci nome</string>
    <string name="surname_ita">Cognome:</string>
    <string name="insert_surname_ita">Inserisci Cognome</string>
    <string name="phone_number">Telefono:</string>
    <string name="insert_phone_number_ita">Inserisci numero di telefono</string>
    <string name="email_ita">Email:</string>
    <string name="insert_email_ita">Inserisci Email</string>
    <string name="save_ita">Salva</string>
    <string name="what_you_need_ita">Cosa devi fare?</string>
    <string name="client_list_ita">Lista Clienti</string>
    <string name="show_all_clients_ita">Mostra tutti i clienti</string>
    <string name="brand_ita">Marca:</string>
    <string name="insert_brand_ita">Inserisci la marca</string>
    <string name="model_ita">Modello:</string>
    <string name="insert_model_ita">Inserisci il modello</string>
    <string name="chassis_ita">Telaio:</string>
    <string name="insert_chassis_number_ita">Inserisci il numero di telaio</string>
    <string name="owner_ita">Cliente:</string>
    <string name="plate_number_ita">Targa:</string>
    <string name="insert_plate_number_ita">Inserisci la targa</string>
    <string name="new_auto_ita">Nuova Auto</string>
    <string name="new_vehicle_ita">Nuovo Veicolo</string>
    <string name="description_ita">Descrizione:</string>
    <string name="insert_the_description_ita">Inserisci la descrizione</string>
    <string name="hours_needed_ita">Ore \n Necessarie:</string>
    <string name="insert_hours_needed_ita">Inserisci le ore necessarie</string>
    <string name="starting_date_ita">Data Inizio:</string>
    <string name="insert_job_start_date_ita">Inserisci la data di inizio intervento</string>
    <string name="end_date_ita">Data Fine:</string>
    <string name="insert_job_end_date_ita">Inserisci la data di fine intervento</string>
    <string name="vehicle_ita">Veicolo:</string>
    <string name="show_all_vehicles_ita">Mostra tutti i Veicoli</string>
    <string name="show_all_jobs_ita">Mostra tutti gli Interventi</string>
    <string name="vehicle_list_ita">Lista Veicoli</string>
    <string name="jobs_list_ita">Lista Interventi</string>
</resources>