<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomePageFragment"
    android:backgroundTint="#00000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/new_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/new_item_label"
            android:text="@string/what_you_need_ita"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/new_vehicle_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.5" />

        <Button

            android:id="@+id/new_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_ita"
            app:layout_constraintBottom_toTopOf="@+id/new_client_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_vehicle_button"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/new_client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_client_ita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_job_button"
            app:layout_constraintVertical_bias="0.5" />


        <Button
            android:id="@+id/new_vehicle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_vehicle_ita"
            app:layout_constraintBottom_toTopOf="@+id/new_job_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>